fix carousel text overflow

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,3 +2,12 @@
     padding-bottom: 15px;
     padding-top: 15px;
 }
+
+.carousel-text-container {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 85px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+}
